async PDF file loading and processing, plus sidebar formatting

--- a/src/web/autocount.html
+++ b/src/web/autocount.html
@@ -6,27 +6,14 @@
 </head>
 
 <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="../build/pdf.js"></script>
     <script src="../build/pdf.worker.js"></script>
-
 
     <div id="drop-area">
         <div id="counts">
             <div id="table">
-                <div class="row">
-                    <div class="col">
-                        Description
-                    </div>
-                    <div class="col">
-                        Symbol
-                    </div>
-                    <div class="col">
-                        #
-                    </div>
-                </div>
             </div>
-            <div class="dragbar"></div>
+            <div id="dragbar"></div>
         </div>
         <div id="drawings">
         </div>
